Lab03/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: <PROVIE A NAME FOR THE NGINX SERVICE>
  labels:
    app: nginx-service
spec:
  type: NodePort
  ports:
  - protocol: <REPLACE HERE FOR THE PROTOCOL USED BY HTTP SERVICES - TCP OR UDP>
    targetPort: <REPLACE HERE BY THE DEFAULT TCP PORT FOR HTTP SERVICECS>
    port: 80
  selector:
    app: <REPLACE HERE BY THE NGINX POD LABEL CONFIGURED ON LAB 02>
