Lab03/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: <PROVIDE A NAME FOR THE SERVICE>
  labels:
    app: <PROVIDE A LABEL FOR THE SERVICE>
spec:
  type: <SPECIFY THE TYPE FOR THE SERVICE>
  ports:
  - protocol: <SPECIFY THE PROTOCOL FOR ACCESSING THE WORDPRESS CONTAINER, TCP OR UDP>
    targetPort: <SPECIFY THE TCP PORT TO ACCESS THE POD. WORDPRESS USES APACHE AS A WEBSERVER>
    port: 80
  selector:
    app: <PROVIDE THE LABEL CREATED ON THE WORDPRESS POD>
